Fix: adjust subcontract delete modal spacing

--- a/src/app/modules/framework-agreements/components/framework-agreements-modal/framework-agreements-modal.component.scss
+++ b/src/app/modules/framework-agreements/components/framework-agreements-modal/framework-agreements-modal.component.scss
@@ -66,3 +66,11 @@
     background: $primary-color !important;
   }
 }
+
+.confirmation-content {
+  text-align: center;
+  
+  .stronglock {
+    display: inline;
+  }
+}
